fix: set every letter spacing to em instead of rem

--- a/components/largeBtn/largeBtn.module.css
+++ b/components/largeBtn/largeBtn.module.css
@@ -4,7 +4,7 @@
 	text-transform: uppercase;
 	font-weight: 600;
 	line-height: 120%;
-	letter-spacing: 0.05rem;
+	letter-spacing: 0.05em;
 	text-align: center;
 	display: block;
 	padding: 2.2rem 0;
